--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.main-backgroundImage {
+  height : 300px;
+  background-image : url('/public/images/backgroundImage.png');
+  background-size : cover;
+  background-position : center;
+}
